mudança de paleta

--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ body {
 }
 
 .heading_container h2 span {
-  color: #00c6a9;
+  color: #044fa1;
 }
 
 .heading_container.heading_center {
@@ -113,11 +113,11 @@ a:focus {
 }
 
 .header_section .header_top .contact_nav a i {
-  color: #00c6a9;
+  color: #044fa1;
 }
 
 .header_section .header_bottom {
-  background-color: #00c6a9;
+  background-color: #044fa1;
 }
 
 .header_section .header_bottom .container-fluid {
@@ -140,7 +140,7 @@ a:focus {
 .custom_nav-container .navbar-nav .nav-item .nav-link {
   padding: 3px 15px;
   margin: 10px 15px;
-  color: #ffffff;
+  color: #fde01b;
   text-align: center;
   text-transform: uppercase;
 }
@@ -255,7 +255,7 @@ a:focus {
 }
 
 .quote_btn-container a {
-  color: #ffffff;
+  color: #fde01b;
   margin-right: 25px;
   text-transform: uppercase;
 }
@@ -331,7 +331,7 @@ a:focus {
 }
 
 .slider_section .play_btn button {
-  background-color: #00c6a9;
+  background-color: #044fa1;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -358,7 +358,7 @@ a:focus {
   position: absolute;
   top: 50%;
   left: 50%;
-  background-color: #00c6a9;
+  background-color: #044fa1;
   opacity: 1;
   border-radius: 100%;
   -webkit-transform: translate(-50%, -50%);
@@ -409,7 +409,7 @@ a:focus {
 }
 
 .slider_section .detail-box h1 span {
-  color: #00c6a9;
+  color: #044fa1;
 }
 
 .slider_section .detail-box p {
@@ -455,7 +455,7 @@ a:focus {
   position: unset;
   width: 50px;
   height: 50px;
-  background-color: #00c6a9;
+  background-color: #044fa1;
   opacity: 1;
 }
 
@@ -476,7 +476,7 @@ a:focus {
 }
 
 .book_section h4 span {
-  color: #00c6a9;
+  color: #044fa1;
 }
 
 .book_section h4::before {
@@ -486,7 +486,7 @@ a:focus {
   bottom: 0;
   width: 75px;
   height: 2px;
-  background-color: #00c6a9;
+  background-color: #044fa1;
 }
 
 .book_section form {
@@ -502,7 +502,7 @@ a:focus {
 .book_section form .form-control {
   width: 100%;
   background-color: transparent;
-  border: 1px solid #00c6a9;
+  border: 1px solid #044fa1;
   height: 45px;
   outline: none;
   -webkit-box-shadow: none;
@@ -512,27 +512,27 @@ a:focus {
 }
 
 .book_section form .form-control::-webkit-input-placeholder {
-  color: #00c6a9;
+  color: #044fa1;
 }
 
 .book_section form .form-control:-ms-input-placeholder {
-  color: #00c6a9;
+  color: #044fa1;
 }
 
 .book_section form .form-control::-ms-input-placeholder {
-  color: #00c6a9;
+  color: #044fa1;
 }
 
 .book_section form .form-control::placeholder {
-  color: #00c6a9;
+  color: #044fa1;
 }
 
 .book_section form #inputDate {
-  color: #00c6a9;
+  color: #044fa1;
 }
 
 .book_section form #inputDate input {
-  color: #00c6a9;
+  color: #044fa1;
 }
 
 .book_section form button.btn {
@@ -559,7 +559,7 @@ a:focus {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  color: #00c6a9;
+  color: #044fa1;
 }
 
 .book_section .nice-select:after {
@@ -651,7 +651,7 @@ a:focus {
 
 .treatment_section .box .detail-box a {
   text-transform: uppercase;
-  color: #00c6a9;
+  color: #044fa1;
 }
 
 .treatment_section .box .detail-box a:hover {
@@ -659,7 +659,7 @@ a:focus {
 }
 
 .team_section {
-  background-color: #00c6a9;
+  background-color: #044fa1;
 }
 
 .team_section .heading_container {
@@ -711,7 +711,7 @@ a:focus {
 }
 
 .team_section .box .detail-box h6 {
-  color: #00c6a9;
+  color: #044fa1;
 }
 
 .team_section .box .detail-box .social_box {
@@ -810,7 +810,7 @@ a:focus {
 
 .client_section .box .client_info .client_name h5 {
   font-weight: 600;
-  color: #00c6a9;
+  color: #044fa1;
 }
 
 .client_section .box .client_info .client_name h6 {
@@ -832,7 +832,7 @@ a:focus {
 .client_section .carousel-control-next {
   width: 45px;
   height: 125px;
-  background-color: #00c6a9;
+  background-color: #044fa1;
   opacity: 1;
   font-size: 28px;
   font-weight: bold;
@@ -867,7 +867,7 @@ a:focus {
 
 .contact_section .form_container input {
   width: 100%;
-  border: 1px solid #00c6a9;
+  border: 1px solid #044fa1;
   height: 50px;
   margin-bottom: 25px;
   padding-left: 15px;
@@ -877,19 +877,19 @@ a:focus {
 }
 
 .contact_section .form_container input::-webkit-input-placeholder {
-  color: #00c6a9;
+  color: #044fa1;
 }
 
 .contact_section .form_container input:-ms-input-placeholder {
-  color: #00c6a9;
+  color: #044fa1;
 }
 
 .contact_section .form_container input::-ms-input-placeholder {
-  color: #00c6a9;
+  color: #044fa1;
 }
 
 .contact_section .form_container input::placeholder {
-  color: #00c6a9;
+  color: #044fa1;
 }
 
 .contact_section .form_container input.message-box {
@@ -901,7 +901,7 @@ a:focus {
   text-transform: uppercase;
   display: inline-block;
   padding: 15px 65px;
-  background-color: #00c6a9;
+  background-color: #044fa1;
   color: #ffffff;
   border-radius: 0;
   font-weight: bold;
@@ -988,7 +988,7 @@ a:focus {
 
 .info_section .info_form form button {
   background-color: transparent;
-  color: #00c6a9;
+  color: #044fa1;
   margin-top: 15px;
   text-transform: uppercase;
   font-size: 15px;
@@ -1012,7 +1012,7 @@ a:focus {
   left: 0;
   width: 15px;
   height: 15px;
-  background-color: #00c6a9;
+  background-color: #044fa1;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
 }
@@ -1036,7 +1036,7 @@ a:focus {
 }
 
 .info_section .info_links .info_links_menu a:hover, .info_section .info_links .info_links_menu a.active {
-  color: #00c6a9;
+  color: #044fa1;
 }
 
 .info_section .info_post .post_box {
@@ -1115,7 +1115,7 @@ a:focus {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  color: #00c6a9;
+  color: #044fa1;
   font-size: 24px;
   margin-right: 10px;
 }
