--- a/css/style.css
+++ b/css/style.css
@@ -697,6 +697,8 @@ a:focus {
 
 .team_section .box .img-box img {
   width: 100%;
+  max-height: 220px;
+  margin-top: 88px;
 }
 
 .team_section .box .detail-box {
